# Universidad

./: .gitignore  CMakeLists.txt  Java-vs-C\C++.md  PrimerTest.cpp  README.md  SegundoTest.cpp  TiposDeDatos.cpp  a.out
C++_Doc/: 1_PrimerTest.cpp  3_Arrays.cpp  4_EstructurasDeControl.cpp  CMakeLists.txt  CalcularTiempo.h  CalcularTiempoTest.cpp
C++_Doc/1_Introduccion-C++/: 1_PrimerTest.cpp  2_TiposDeDatos.cpp  3_Arrays.cpp  4_EstructurasDeControl.cpp  5_Operadores.cpp  6_PalabrasReservadasC++.cpp
C++_Doc/2_ProgramacionOrientadaObjetos/: 1_DelimitadoresAcceso.cpp  2_EdadPOO.cpp  3_Herencia.cpp  4_Polimorfismo.cpp  Polimorfismo
C++_Doc/3_TareasUNI-C++/: 1_VariablesFlotantes.cpp  2_VariablesBoleanas.cpp  3_VariablesCadena.cpp
C++_Doc/3_TareasUNI-C++/ProyectoFundamentos/: CalendarioTerminal.cpp  CalendarioTerminal.h  Controladores.h  ProyectoFund.cpp  RegistroDAO.h  UsuariosEntity.h
C++_Doc/4_Proyectos_SMFL/: makefile  onda
C++_Doc/4_Proyectos_SMFL/_1_Introduccion_SMFL/: 1_prueba.cpp  2_Numeros_Random.cpp  numeros
C++_Doc/4_Proyectos_SMFL/_1_Introduccion_SMFL/2_Numeros_Random.dSYM/Contents/: Info.plist
C++_Doc/4_Proyectos_SMFL/_1_Introduccion_SMFL/2_Numeros_Random.dSYM/Contents/Resources/DWARF/: 2_Numeros_Random
C++_Doc/4_Proyectos_SMFL/_1_Introduccion_SMFL/2_Numeros_Random.dSYM/Contents/Resources/Relocations/aarch64/: 2_Numeros_Random.yml
C++_Doc/ARDUINO/_01_Pruebas/: Arduino.h  Blink.cpp  Blink.h  CMakeLists.txt  main.cpp  toolchain-avr.cmake
C++_Doc/Estructuras_De_Datos/: CMakeLists.txt  main.cpp
C++_Doc/Estructuras_De_Datos/Arboles/: Arbol.cpp  Arbol.h  Nodo.cpp  Nodo.h  main.cpp
C++_Doc/Estructuras_De_Datos/Diccionario_Morse/: Diccionario_Morse.cpp
C++_Doc/Estructuras_De_Datos/Merge_Sort/: Busqueda_Binaria.cpp  main.cpp
C++_Doc/Estructuras_De_Datos/Merge_Sort/ByAlaan/: Algoritmo.cpp  Algoritmo.h  Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  main.cpp
C++_Doc/Estructuras_De_Datos/Merge_Sort/ByEmmanuel/: Alumno.cpp  Lista.cpp  Lista.h  MergeSort.h  Nodo.cpp  main.cpp
C++_Doc/Estructuras_De_Datos/Practica/: main.cpp
C++_Doc/Estructuras_De_Datos/Programa_02_2/: Alumno.cpp  Alumno.h  Lista  Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  main.cpp
C++_Doc/Estructuras_De_Datos/Programa_05_/: Lista.cpp  Nodo.cpp  Nodo.h  main.cpp
C++_Doc/Estructuras_De_Datos/Programa_1_/: Carro.cpp  Carro.h  Gato.cpp  Gato.h  main.cpp
C++_Doc/Estructuras_De_Datos/Programa_2_/: Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  _Clase_.cpp  _Clase_.h  main.cpp
C++_Doc/Estructuras_De_Datos/Programa_3/: Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  main.cpp
C++_Doc/Estructuras_De_Datos/Programa_5_/BubbleSort/: BubbleSort.cpp  BubbleSort.h
C++_Doc/Estructuras_De_Datos/Programa_5_/Lista/: Alumno.h  Lista.cpp  Lista.h  Nodo.cpp  Nodo.h  main.cpp
C++_Doc/Estructuras_De_Datos/Proyecto/: Grafo.h  Lista.h  Lista.tpp  Nodo.h  Nodo.tpp  main.cpp
C++_Doc/Estructuras_De_Datos/Proyecto_V2/: Grafo.cpp  Grafo.h  Lista.cpp  Lista.h  Lista_vertices.cpp  Lista_vertices.h  Nodo.cpp  Nodo.h  main.cpp
C++_Doc/Estructuras_De_Datos/Proyecto_V3/: Grafo.cpp  Grafo.h  ListaAristas.cpp  ListaAristas.h  ListaEnlazada.cpp  ListaEnlazada.h  Nodo.cpp  Nodo.h  NodoArista.cpp  NodoArista.h  NodoVertice.cpp  NodoVertice.h  main.cpp
C++_Doc/Estructuras_De_Datos/Proyecto_V4/: Grafo.cpp  Grafo.h  ListaAristas.cpp  ListaAristas.h  NodoArista.cpp  NodoArista.h  NodoVertice.cpp  NodoVertice.h  Prim.cpp  Prim.h  Sucursal.cpp  Sucursal.h  grafo  main.cpp
C++_Doc/Estructuras_De_Datos/Repaso_1er_Examen/: Lista.cpp
C++_Doc/PrimerProgramaConC++/: Controladores.h  RegistroDAO.h  RegistroHotel  RegistroHotel.cpp  Usuarios.h
C++_Doc/ProyectoFundamentosprog/: RegistroDAO.h  UsuariosEntity.h  main.cpp
CAC/: Club_De_Algoritmia.md
C_Doc/: CMakeLists.txt  LogicaNegocio.c  LogicaNegocio.h  NegocioDTO.c  NegocioDTO.h  UsuarioDTO.c  UsuarioDTO.h  Util.c  Util.h  main.c
C_Doc/Algoritmos/: _1_Add_Two_Numbers.c
C_Doc/Listo/: Almacen.c  ApartadoOtros.c  Clientes.c  ConstantesMotores.c  LogicaNegocio.c  LogicaNegocio.h  Pago.c  RegistrarMotor.c  SystemLogs.c  SystemLogs.h  Testing.c  Testing.h  UserInterface.c  UserInterface.h  UsuarioDAO.c  UsuarioDTO.c  UsuarioDTO.h  main.c  reloj.c  reloj.h
C_Doc/ProyectoPE/: Acceso.c  Almacen.c  AlmacenYOtros.h  ApartadoOtros.c  Clientes.c  ConstantesMotores.c  ConstantesMotores.h  EjecutableLINUX  Escape.c  Ingreso.c  LogicaNegocio.c  LogicaNegocio.h  Logo.c  Logs-Sistema2025-05-12_20-10-13.txt  Motores.c  Motores.h  PE  Pago.c  Pe  ProyectoPE_txt.txt  Rectificación.c  RegistrarMotor.c  Reloj.c  SystemLogs.c  SystemLogs.h  Testing.c  Testing.h  UserInterface.c  UserInterface.h  UsuarioDAO.c  UsuarioDTO.c  UsuarioDTO.h  Util.c  Util.h  coso  main.c  reloj.c  reloj.h
C_Doc/ProyectoPE/PE.dSYM/Contents/: Info.plist
C_Doc/ProyectoPE/PE.dSYM/Contents/Resources/DWARF/: PE
C_Doc/ProyectoPE/PE.dSYM/Contents/Resources/Relocations/aarch64/: PE.yml
Java_Doc/: .gitignore  pom.xml
Java_Doc/ONE_Introduccion_A_Java/: _1_PrimerTest.java  _3_Arrays.java  module-info.java  pom.xml
Proyectos/FundamentosIA/: proyecto.pl
Proyectos/Programacion_Para_Internet/Tarea_2_/: tablas.html
Proyectos/Programacion_Para_Internet/Tarea_4_/: login.html
Proyectos/Programacion_Para_Internet/Tarea_5_/: Caritas.html
Proyectos/Programacion_Para_Internet/Tarea_7_/: validar_ip.php  (+1 more)
Python_Doc/1_Introduccion-Python/: _1_PrimerTest.py
Python_Doc/ALgoritmos_Busquedas/: main.py  verticeMapa2.npy
Python_Doc/Algoritmos_Scripts/: TextoPrueba.txt  _06_Calculos_matematicos.py  _1_Market_Analisis.ipynb  _1_PrimerAlgoritmo.py  _2_Import_sys.py  _3_App_Banco.py  _4_Estructuras_De_Datos.py  _5_Finance_Program.py  _Porcentaje_Rendimientos_.py
Python_Doc/Analisis_Algoritmos/: Tarea_02.py  mai.py  main.py  mapaProfundidad.npy  mapaProfundidad2.npy  pyproject.toml  verticeChiquito.npy
Python_Doc/Fast_API/: _1_Controllers.py  _2_DDOS_My_Atack.py  _3_Snake_Game_Test_1.py
Python_Doc/ML/: MLPverano.py
Python_Doc/Python_back/: _01_Permutaciones.py
shell/SIstemas_Operativos/: .instrucciones.sh.swp  instrucciones.sh
(+187 files in other folders)
