cmake_minimum_required(VERSION 3.30)
project(Estructuras_De_Datos/Programa_1_)

set(CMAKE_CXX_STANDARD 17)

add_executable(Estructuras_De_Datos
#[[
        Programa_1_/main.cpp
        Programa_1_/Gato.cpp
        Programa_1_/Gato.h
        Programa_1_/Carro.cpp
        Programa_1_/Carro.h

]]


        Programa_02_2/Nodo.cpp
        Programa_02_2/Nodo.h
        Programa_02_2/Lista.cpp
        Programa_02_2/Lista.h
        Programa_02_2/main.cpp
        Programa_02_2/Alumno.cpp
        Programa_02_2/Alumno.h
)
