cmake_minimum_required(VERSION 3.30)
project(Estructuras_De_Datos/Programa_1_)

set(CMAKE_CXX_STANDARD 17)

add_executable(Estructuras_De_Datos
        #[[
        Programa_3/Lista.cpp
        Programa_3/Lista.h
        Programa_3/Nodo.cpp
        Programa_3/Nodo.h
        Programa_3/main.cpp
        Programa_3/Alumno.cpp
        Programa_3/Alumno.h
        ]]

        #[[
        Merge_Sort/Busqueda_Binaria.cpp
        ]]

        #[[
                Programa_1_/main.cpp
                Programa_1_/Gato.cpp
                Programa_1_/Gato.h
                Programa_1_/Carro.cpp
                Programa_1_/Carro.h

        ]]
#[[
            Programa_02_2/Nodo.cpp
        Programa_02_2/Nodo.h
        Programa_02_2/Lista.cpp
        Programa_02_2/Lista.h
        Programa_02_2/main.cpp
        Programa_02_2/Alumno.cpp
        Programa_02_2/Alumno.h
]]

        #[[Programa_3/Lista.cpp
        Programa_3/Lista.h
        Programa_3/Nodo.cpp
        Programa_3/Lista.h
        Programa_3/main.cpp]]

        #[[
        Merge_Sort/ByAlaan/Algoritmo.cpp
        Merge_Sort/ByAlaan/Algoritmo.h
        Merge_Sort/ByAlaan/Lista.h
        Merge_Sort/ByAlaan/Lista.cpp
        Merge_Sort/ByAlaan/main.cpp
        Merge_Sort/ByAlaan/Nodo.cpp
        Merge_Sort/ByAlaan/Nodo.h
        ]]

        #[[
        Merge_Sort/ByEmmanuel/Alumno.cpp
        Merge_Sort/ByEmmanuel/Alumno.h
        Merge_Sort/ByEmmanuel/Lista.cpp
        Merge_Sort/ByEmmanuel/Lista.h
        Merge_Sort/ByEmmanuel/main.cpp
        Merge_Sort/ByEmmanuel/Nodo.cpp
        Merge_Sort/ByEmmanuel/Nodo.h
        Merge_Sort/ByEmmanuel/MergeSort.h
        ]]

        #[[
        Programa_5_/Lista/Alumno.cpp
        Programa_5_/Lista/Alumno.h
        Programa_5_/Lista/Lista.cpp
        Programa_5_/Lista/Lista.h
        Programa_5_/Lista/main.cpp
        Programa_5_/Lista/Nodo.cpp
        Programa_5_/Lista/Nodo.h
        Programa_5_/Lista/
        Programa_5_/BubbleSort/BubbleSort.cpp
        Programa_5_/BubbleSort/BubbleSort.h
        ]]
        #[[Practica/
        Practica/main.cpp
        Repaso_1er_Examen/Nodo.cpp
        Repaso_1er_Examen/Nodo.h]]

        #[[
        Repaso_1er_Examen/Lista.cpp
        Repaso_1er_Examen/main.cpp
        Repaso_1er_Examen/Nodo.cpp
        ]]

        Arboles/main.cpp
        Arboles/Nodo.cpp
        Arboles/Nodo.h
        Arboles/Arbol.cpp
        Arboles/Arbol.h

)
